--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expoapp",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,41 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@adembacaj/react-native-hooks": "^1.0.1",
+    "@adembacajdev/react-native-logger": "^1.0.0",
     "expo": "~49.0.15",
+    "expo-apple-authentication": "~6.1.0",
+    "expo-asset": "~8.10.1",
+    "expo-av": "~13.4.1",
+    "expo-background-fetch": "~11.3.0",
+    "expo-blur": "~12.4.1",
+    "expo-calendar": "~11.3.2",
+    "expo-camera": "~13.4.4",
+    "expo-checkbox": "~2.4.0",
+    "expo-constants": "~14.4.2",
+    "expo-face-detector": "~12.2.0",
+    "expo-gl": "~13.0.1",
+    "expo-haptics": "~12.4.0",
+    "expo-image": "~1.3.5",
+    "expo-image-manipulator": "~11.3.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-intent-launcher": "~10.7.0",
+    "expo-linking": "~5.0.2",
+    "expo-local-authentication": "~13.4.1",
+    "expo-print": "~12.4.2",
+    "expo-router": "^2.0.0",
+    "expo-screen-capture": "~5.3.0",
+    "expo-sensors": "~12.3.0",
+    "expo-sharing": "~11.5.0",
+    "expo-sms": "~11.4.0",
+    "expo-speech": "~11.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
